# oxibot

./: Cargo.toml  default.nix  flake.nix
.sqlx/: query-07d3377638196de46dac3f7eb866689de6942f1d15b1efd9daf51a8150a0f6c5.json  query-1f51b2de12c670728eeb49f7593e52101e0188323c2342524d7a5b25b8dede7a.json  query-225463fea473e5059bcaa97dc4c0f501fc7fb0db5ded6a1d40e97965191f2603.json  query-315ebfb62cce47519a68393d5edfa567b57fddf6316289dc66ff2947f96a6383.json  query-3942735c4902f4cd7b71acbe7e78233236c465d413c4f633099b916352bbe5e0.json  query-3f94016e0409535ecd8ee27301aaca38d14243cf22b9892311cd132b5dbac98d.json  query-5b27766e5f76e6fe944f2c9a4fc7cb02c2e488322dd142be561b97b2f9fbb33f.json  query-5e66c4b5552694f14e1575a84194c62d884bcad83240a788aac5816976f0fac5.json  query-69946ce89c84d0c31408f6d051175282b30bc048c0a59c6aeb85f7c79f573779.json  query-6e9d7aa2e84587ad2d6acbc6a4a654c5393c4dc22a2772f8503c5b055f678db4.json  query-7286bc080126c6dce26e6e63b7b68bdb523a42554881ae18ebaf5f8e5ea84e0c.json  query-789087b68c04ab00e8a02fa8613efa2b9cdc88b8b1f4807e04e901937013a6ea.json  query-79f26c97c3d3b48b21ef1d3bf1c1847a2d837e1054fe2c1bbd1e9ac8664e6762.json  query-895858d89c91080554ac7316dd31d2dd0583dfdef49ad2f6432ab1a1a15d9662.json  query-a49617a7fb6a02bedfe1a4f8dcc823a2fe8a0f1b458833436fcef08fb3c2e3d1.json  query-a62cb10311739bcee3cc0d136f74308b821843bcfcc94a4fd6f1e2836d8d8401.json  query-abd1d2ad24b0e3bdce337b5f5c1956a37f8219f2f189e6f7edaf1c03165c0744.json  query-b7f72055df4133613125b267cc64ef827e6fd4f004084f2652dda1e3868e43af.json  query-b8c5577b05b86cacce8431eabc0e97aa71b5bf6898f336dc6995ad71a76647c6.json  query-bfdfa89a2484c35ddc5f6076a412e958a5e98b020fade6d06397a28934f092d3.json  query-cb5bd0376da5e9ed25ec62447af60194c005a773c6ce623c80d13c1aec5262c8.json  query-cd344e52f3715e2b289cd68abd8948bb1d34939e6446700da79522334d4d4310.json  query-d352afdd8e4118933490c0de7ddf4a8ab652d61d6e6f0680204f2eb88a1dee8c.json  query-e204742e869c5d92034dfc158159f45229754c6f83d3f57d3b118ed0faf21812.json  query-f44c5469d78218976101febc4592bf2016c02cdb5f5b4cd09fd489402c856af0.json  query-ffe566d52c76a6c4bfca21d3061c02391683ae9772811a34554dd4251c4e7afe.json
migrations/: 20240704052944_goodbye_channel.sql
npins/: sources.json
src/: commands.rs  database.rs  event_handlers.rs  main.rs
src/commands/: burg.rs  goodbye.rs  tags.rs  (+2 more)
(+4 files in other folders)
