[package]
name = "oxibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = { version = "=0.12.3" } # Fix reaction deserialization
tokio = { version = "1.41", features = [ "rt-multi-thread", "macros", "sync", "signal" ] }
dotenvy = "0.15"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[dependencies.sqlx]
version = "0.8"
features = [ "macros", "runtime-tokio-rustls", "postgres" ]

[profile.dev.package.sqlx-macros]
opt-level = 3
