[package]
name = "oxibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43", features = [ "rt-multi-thread", "macros", "sync", "signal" ] }
dotenvy = "0.15"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[dependencies.poise]
default-features = false
features = ["cache", "chrono", "handle_panics"]
version = "0.6.1"

[dependencies.serenity]
default-features = false
features = ["native_tls_backend"]
version = "=0.12.4" # Fix reaction deserialization

[dependencies.sqlx]
version = "0.8"
features = [ "macros", "runtime-tokio-rustls", "postgres" ]

[profile.dev.package.sqlx-macros]
opt-level = 3
